--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "tezomun/timbrado-service",
     "description": "Paquete para la integración con el servicio de timbrado de Comercio Digital, timbrado y cancelación, también generación de xml de timbrado y cancelación como servicio",
-    "version": "v1.1.0",
+    "version": "v1.1.1",
     "type": "library",
     "require": {
         "php": ">=7.4",
@@ -24,6 +24,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "extra": {
         "laravel": {
             "providers": [
